'The bug with the modal title saying 'You PlayerLose!' and 'You PlayerWin!' or 'You Draw!' is now fixed with some if, else if, and else statements. also changed the color of the button for closing the modal to something a bit darker for improved visibility'

--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@ button:hover{
 }
 
 .close {
-  color: #aaa;
+  color: rgb(0, 0, 0);
   float: right;
   font-size: 28px;
   font-weight: bold;
